unpackaged/objects/Project_Risk__c.object
<CustomObject>
  <description>Used for internal CRM projects - used to identify, add and mitigate project risks</description>
  <fields>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Function_Risk__c</fullName>
    <inlineHelpText>Add to which extent this risk to negatively impact the functionality</inlineHelpText>
    <label>Function Risk</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Low</fullName>
        </value>
        <value>
          <fullName>Medium</fullName>
        </value>
        <value>
          <fullName>High</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Likelyhood__c</fullName>
    <inlineHelpText>Add how likely it is that the risk happens</inlineHelpText>
    <label>Likelyhood</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Low</fullName>
        </value>
        <value>
          <fullName>Medium</fullName>
        </value>
        <value>
          <fullName>High</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Mitigation_Plan__c</fullName>
    <inlineHelpText>Add the actions needed in order to reduce/mitigate the risk</inlineHelpText>
    <label>Mitigation Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Add notes related to the risk -  e.g. actions taken, meetings held, decisions taken</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Risks</relationshipLabel>
    <relationshipName>Project_Risks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Risk_Status__c</fullName>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Identified</fullName>
        </value>
        <value>
          <fullName>Mitigation in Progress</fullName>
        </value>
        <value>
          <fullName>Mitigated - still a risk</fullName>
        </value>
        <value>
          <fullName>Eliminated - no or very low risk</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Time_Risk__c</fullName>
    <inlineHelpText>Add to what extent this risk will impact the project time plan</inlineHelpText>
    <label>Time Risk</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Low</fullName>
          <default>true</default>
          <label>Low</label>
        </value>
        <value>
          <fullName>Medium</fullName>
        </value>
        <value>
          <fullName>High</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <label>Project Risk</label>
  <nameField>
    <label>Project Risk</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Project Risks</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>